--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,4 +1,4 @@
-.profile__taitle {
+.profile__subtitle {
     font-style: normal;
     max-width: 336px;
     font-size: 18px;
@@ -11,7 +11,7 @@
     overflow: hidden;
 }
 @media screen  and (max-width: 645px) {
-    .profile__taitle {
+    .profile__subtitle {
         max-width: 282px;
         font-size: 14px;
         line-height: 17px;
