--- a/blocks/element/__heart/_active/element__heart_active.css
+++ b/blocks/element/__heart/_active/element__heart_active.css
@@ -1,3 +1,3 @@
-.element__hurt_active {
-    background: url('../../../../images/icon/hurt__vector-black.svg');
+.element__heart_active {
+    background: url('../../../../images/icon/heart__vector-black.svg');
 }
