--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,9 @@
 .popup {
     position: fixed;
-    display: none;
+    display: flex;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s linear;
     justify-content: center;
     align-items: center;
     top: 0;
