--- a/pages/index.css
+++ b/pages/index.css
@@ -27,10 +27,15 @@
 @import url('../blocks/element/__title/element__title.css');
 @import url('../blocks/element/__heart/element__heart.css');
 @import url('../blocks/element/__heart/_active/element__heart_active.css');
+@import url('../blocks/element/__heart-delete/element__heart-delete.css');
 @import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__container/_type/popup__container_type_photo.css');
 @import url('../blocks/popup/__close-button/popup__close-button.css');
 @import url('../blocks/popup/__title/popup__title.css');
+@import url('../blocks/popup/__title-full-screen/popup__title-full-screen.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__image-full-screen/popup__image-full-screen.css');
+@import url('../blocks/popup/__photo/popup__photo.css');
 @import url('../blocks/popup/__save-button/popup__save-button.css');
 @import url('../blocks/popup/_open/popup_open.css');
 @import url('../blocks/popup/__form/popup__form.css');
