--- a/blocks/popup/__image-full-screen/popup__image-full-screen.css
+++ b/blocks/popup/__image-full-screen/popup__image-full-screen.css
@@ -2,5 +2,7 @@
     height: 100%;
     width: 100%;
     max-height: 75vh;
+    max-width: 75vw;
     object-fit: cover;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
 }
