--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,20 +1,18 @@
 .popup__input {
-    margin: 0 auto;
+    margin: 0;
+    padding: 0 0 10px;
     font-weight: 400;
     font-size: 14px;
-    line-height: 17px;
-    width: 358px;
-    color: #000000;
+    line-height: 1.22;
+    max-width: 358px;
+    width: 100%;
+    padding: 0;
     border: none;
-    padding: 0 0 13px 0;
-    border-bottom: 1px solid rgba(0,0,0,.2);
-    margin-top: 30px;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
-@media screen  and (max-width: 595px) {
+@media screen and (max-width: 520px) {
     .popup__input {
         width: 238px;
-        height: 14px;
-        line-height: 14px;
-        }
     }
+}
