--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -9,6 +9,7 @@
     background: #000000;
     border-radius: 2px;
     margin-top: 48px;
+    cursor: pointer;
     border: none;
     margin-bottom: 37px;
 }
