--- a/blocks/popup/__text-error/popup__text-error.css
+++ b/blocks/popup/__text-error/popup__text-error.css
@@ -1,8 +1,8 @@
 .popup__text-error {
-  visibility: hidden;
-  display: flex;
-  align-self: start;
-  color: #FF0000;
-  font-size: 12px;
   padding-top: 5px;
+  display: block;
+  min-height: 29px;
+  font-size: 12px;
+  line-height: 1.22;
+  color: #FF0000;
 }
