--- a/blocks/popup/__title-full-screen/popup__title-full-screen.css
+++ b/blocks/popup/__title-full-screen/popup__title-full-screen.css
@@ -1,7 +1,7 @@
 .popup__title-full-screen {
     text-align: start;
     font-size: 12px;
-    line-height: 15px;
+    line-height: 1.25;
     font-weight: 400;
     margin-top: 10px;
 }
