--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,20 +1,18 @@
 .popup__title {
-    width: 358px;
-    margin: 0 auto;
+    max-width: 358px;
+    width: 100%;
+    margin: 34px 0 45px;
+    padding: 0;
     font-weight: 900;
     font-size: 24px;
-    line-height: 29px;
-    color: #000000;
-    margin-top: 34px;
-    margin-bottom: 24px;
+    line-height: 1.21;
 }
 
-@media screen  and (max-width: 595px) {
+@media screen and (max-width: 595px) {
     .popup__title {
-        width: 238px;
+        max-width: 238px;
         font-size: 18px;
-        line-height: 22px;
-        margin-top: 25px;
-        margin-bottom: 45px;
-        }
+        line-height: 1.22;
+        margin: 26px 0 46px;
     }
+}
