--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,17 +1,13 @@
 .popup__container {
-    padding: 0 36px 37px;
-    position: relative;
+     position: relative;
     width: 430px;
-    color: #000000;
-    background-color: #FFFFFF;
+    background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
     border-radius: 10px;
-    box-sizing: border-box;
 }
 
 @media screen and (max-width: 595px) {
     .popup__container {
         width: 282px;
-        padding: 0 22px 25px;
     }
 }
