--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,6 +5,7 @@
     font-size: 14px;
     line-height: 1.22;
     max-width: 358px;
+    color: #000000;
     width: 100%;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
