--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,14 +4,15 @@
     text-align: center;
     width: 358px;
     margin: 0 auto;
-    min-height: 50px;
-    color: #FFF;
+    height: 50px;
     background: #000000;
+    color: #FFF;
     border-radius: 2px;
-    margin-top: 48px;
+    margin-top: 18px;
     cursor: pointer;
     border: none;
     margin-bottom: 37px;
+    transition: opacity 0.6s;
 }
 
 @media screen  and (max-width: 595px) {
