--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,11 +1,12 @@
 .popup__title {
-    max-width: 358px;
-    width: 100%;
-    margin: 34px 0 45px;
-    padding: 0;
+    width: 358px;
+    margin: 0 auto;
     font-weight: 900;
     font-size: 24px;
-    line-height: 1.21;
+    line-height: 29px;
+    color: #000000;
+    margin-top: 34px;
+    margin-bottom: 24px;
 }
 
 @media screen and (max-width: 595px) {
@@ -13,6 +14,10 @@
         max-width: 238px;
         font-size: 18px;
         line-height: 1.22;
-        margin: 26px 0 46px;
+        margin: 26px 0 46px;width: 238px;
+        font-size: 18px;
+        line-height: 22px;
+        margin-top: 25px;
+        margin-bottom: 45px;
     }
 }
