--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -11,10 +11,7 @@
 
 @media screen and (max-width: 595px) {
     .popup__title {
-        max-width: 238px;
-        font-size: 18px;
-        line-height: 1.22;
-        margin: 26px 0 46px;width: 238px;
+        width: 238px;
         font-size: 18px;
         line-height: 22px;
         margin-top: 25px;
