--- a/src/blocks/element/__signature/element__signature.css
+++ b/src/blocks/element/__signature/element__signature.css
@@ -1,9 +1,8 @@
 .element__signature {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    padding: 25px 0 30px 0;
-    align-items: center;
-    justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  padding: 22px 15px 22px 21px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
