--- a/src/blocks/profile/__icon/profile__icon.css
+++ b/src/blocks/profile/__icon/profile__icon.css
@@ -1,14 +1,16 @@
 .profile__icon {
-    width: 120px;
-    height: 120px;
-    background: transparent;
-    border-radius: 50%;
-    margin-right: 15px;
+  max-width: 120px;
+  height: 120px;
+  margin: 0;
+  margin-right: 30px;
+  padding: 0;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-@media screen  and (max-width: 645px) {
-    .profile__icon {
-        margin: 0 auto;
-        margin-bottom: 13px;
-        }
-    }
+@media screen and (max-width: 645px) {
+  .profile__icon {
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+}
